# oh-my-opencode-configurator

./: .gitignore  Makefile  README.md  pyproject.toml
opencode_configer/: __main__.py  config_io.py  models.py  server.py
opencode_configer/static/: index.html
