[project]
name = "opencode-configer"
version = "0.1.0"
description = "Web UI for managing opencode and oh-my-opencode configuration pairs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "rich>=14.3.3",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "isort>=8.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
opencode-configer = "opencode_configer.__main__:app"

[tool.pycodestyle]
max-line-length = 120
ignore = ["E251", "E221"]

[tool.isort]
include_trailing_comma = false
use_parentheses = false
line_length = 120

[tool.coverage.run]
omit = ["*/test/*"]

[tool.setuptools.packages.find]
include = ["opencode_configer*"]

[tool.setuptools.package-data]
opencode_configer = ["static/**/*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
